# web-exif-for-film

./: .gitignore  CLAUDE.md  LICENSE  README.md  build-single.mjs  index.html  manifest.json  sw.js
.github/workflows/: release.yml
css/: style.css
docs/superpowers/plans/: 2026-04-09-ui-restructure.md
docs/superpowers/specs/: 2026-04-09-ui-restructure-design.md
scripts/: exifEditor.js  fileHandler.js  filmPresets.js  i18n.js  main.js  presets.js  state.js  ui.js  version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
