[package]
name = "exif-batch-editor"
version = "0.1.0"
description = "Browser-only EXIF batch editor for scanned film images"
authors = ["Merseong"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
